Change condition for footer display to page title

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer class="site-footer">
-  {% if page.url == '/' %}
+  {% if page.title == 'Home' %}
   <div class="ring-colophon">
     <script id="umaring_js" src="https://umaring.mkr.cx/ring.js?id=devaanand19"></script>
     <div id="umaring" style="display:none;"></div>
