Change text alignment and hyphenation in CSS

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -244,8 +244,8 @@ body {
 .about-text p,
 .page-text p {
   margin-bottom: 1rem;
-  text-align: justify;
-  hyphens: auto;
+  text-align: left;
+  hyphens: none;
 }
 
 a.text-link,
