Update umaring script ID in footer.html
Switched to my ID.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer class="site-footer">
   {% if page.title == 'Home' %}
   <div class="ring-colophon">
-    <script id="umaring_js" src="https://umaring.mkr.cx/ring.js?id=devaanand19"></script>
+    <script id="umaring_js" src="https://umaring.mkr.cx/ring.js?id=trentmaziarz"></script>
     <div id="umaring" style="display:none;"></div>
     <div id="umaring-colophon"></div>
     <script>
